platform/k8s/apps/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware
spec:
  replicas: 2
