platform/k8s/apps/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: prod.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: middleware
                port:
                  number: 80
